# ethzasl_apriltag_cmake_starter_code

./: CMakeLists.txt  README.md  main.cpp  main_trial.cpp  match.py  undistort_rectify.cpp
include/: calibration.hpp  calibrationstore.hpp  imagepoints.cpp  objectpoints.cpp  writeconfig.hpp
src/: calibration.cpp  calibrationstore.cpp  writeconfig.cpp
